- added swedish, polish and slovenian locale

1.0.20060322
- added real midday (high noon) time

1.0.20060310
- added german localisation

0.10
- french/czech locale fixes

0.9
- fixes

0.8
- added ability to hide menuitem in the 'Tools' menu
- added icon position configuration
- works in Flock
- added ability to control what is/is not displayed in popup
- fixed configuration dialog on Mac

0.7
- moon phase names
- display next full moon time

0.6
- popup doesn't disappear after a few seconds
- precision improvement (bug fixed)
- moonrise and moonset azimuth
- sunrise/sunset moment definition config
- twilight moment definition config
- added almost all cities :)
 
0.5
- changed graphics
- added moon phase, moonrise and moonset

0.4
- bugfixes
- configuration dialog rewritten

0.3
- bugfixes
- added timezone configuration
- added timeformat configuration
- coordinates can be negative